# Autonomous-Maze-Solving-Robot-and-OpenThread-Synchronisation

./: README.md
maze-client/: CMakeLists.txt  follow_segment.c  leds.c  main.c  maze_solve.c  multi_display.c  path.c  readme.txt  sensors.c  turn.c  uart_rx.c
maze-client/include/: leds.h  maze_solve.h  multi_display.h  path.h  turn.h  uart_rx.h
maze-server/: CMakeLists.txt  follow_segment.c  main.c  maze_solve.c  path.c  sensors.c  turn.c  uart_tx.c
maze-server/include/: follow_segment.h  sensors.h  turn.h  uart_tx.h
